Разделил классы по файлам в задании 2