@@ -1,40 +1,29 @@
-import java.awt.print.Book;
-
 void main() {
     List<Student> students;
-    //students = ReadFromFile();
+    students = ReadFromFileRaw();
     //Один стрим
 }
 
-public List<Student> ReadFromFile(){
-    String path ="Exercise2/files/students.txt";
-    File studFile = new File(path);
-    if (studFile.exists()){
-        try{
-            String content = Files.readString(Path.of(path));
-            System.out.println(content);
-        }
-        catch(IOException e){
+public List<Student> ReadFromFileRaw() {
+    String filePathStr = "Exercise2/files/students.txt";
+    File studFile = new File(filePathStr);
+    if (studFile.exists()) {
+        try {
+            Path path = Paths.get(filePathStr);
+            List<String> content = Files.readAllLines(path);
+            for (String item : content){
+
+            }
+
+        } catch (IOException e) {
             System.out.println("File error");
         }
         return null;
-    }
-    else{
+    } else {
         return null;
     }
 }
 
-protected class Student{
-    private String FIO;
-    private List<Book> ownedBooks;
-    public Student(String FIO, List<Book> ownedBooks) {
-        this.FIO = FIO;
-        this.ownedBooks = ownedBooks;
-    }
-}
-
-protected class Book{
-    private String title;
-    private int pgNum;
-    private LocalDate publishDate;
+public List<Student> ReadFromFileJSON(){
+    return null;
 }
